--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "SkyShader": "http://threejs.org/examples/js/SkyShader.js",
     "AugmentedConsole": "https://raw.githubusercontent.com/spite/THREE.AugmentedConsole.js/master/src/THREE.AugmentedConsole.js",
     "open-iconic": "~1.1.1",
-    "nosleep": "~0.5.0"
+    "nosleep": "~0.5.0",
+    "webvr-polyfill": "git@github.com:caseyyee/webvr-polyfill.git#master"
   }
 }
